--- a/Stochastic-GEP.ipynb
+++ b/Stochastic-GEP.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "2",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "3",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "4",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "dd66ccef",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "b489d73d",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "4c80f00a",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "8887f52d",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "c5dd7c5e",
    "metadata": {},
    "outputs": [],
@@ -162,25 +162,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "26b1c98c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "OSError",
-     "evalue": "Cannot find file '/inputs/scalars.dat'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[25], line 6\u001b[0m\n\u001b[0;32m      2\u001b[0m data \u001b[38;5;241m=\u001b[39m pyo\u001b[38;5;241m.\u001b[39mDataPortal() \n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m## We read all the data from different files\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m### Scalars\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m \u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m/\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43minput_folder\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m/scalars.dat\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m   \n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m### Sets\u001b[39;00m\n\u001b[0;32m      9\u001b[0m data\u001b[38;5;241m.\u001b[39mload(filename\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39minput_folder\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/oGEP_Data_Demand.csv\u001b[39m\u001b[38;5;124m'\u001b[39m    ,\u001b[38;5;28mformat\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mset\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28mset\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mp\u001b[39m\u001b[38;5;124m'\u001b[39m )\n",
-      "File \u001b[1;32mc:\\github-repos\\generation-expansion-planning-models-pyomo\\.conda\\Lib\\site-packages\\pyomo\\dataportal\\DataPortal.py:148\u001b[0m, in \u001b[0;36mDataPortal.load\u001b[1;34m(self, **kwds)\u001b[0m\n\u001b[0;32m    143\u001b[0m _disconnect \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m    144\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_data_manager \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    145\u001b[0m     \u001b[38;5;66;03m#\u001b[39;00m\n\u001b[0;32m    146\u001b[0m     \u001b[38;5;66;03m# Start a new connection\u001b[39;00m\n\u001b[0;32m    147\u001b[0m     \u001b[38;5;66;03m#\u001b[39;00m\n\u001b[1;32m--> 148\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    149\u001b[0m     _disconnect \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m    150\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(kwds) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m    151\u001b[0m     \u001b[38;5;66;03m#\u001b[39;00m\n\u001b[0;32m    152\u001b[0m     \u001b[38;5;66;03m# We are continuing to store using an existing connection.\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    155\u001b[0m     \u001b[38;5;66;03m# initialize() and add_options() aren't clear.\u001b[39;00m\n\u001b[0;32m    156\u001b[0m     \u001b[38;5;66;03m#\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\github-repos\\generation-expansion-planning-models-pyomo\\.conda\\Lib\\site-packages\\pyomo\\dataportal\\DataPortal.py:111\u001b[0m, in \u001b[0;36mDataPortal.connect\u001b[1;34m(self, **kwds)\u001b[0m\n\u001b[0;32m    109\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mIOError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUnknown file format \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m tmp)\n\u001b[0;32m    110\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_data_manager\u001b[38;5;241m.\u001b[39minitialize(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n\u001b[1;32m--> 111\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_data_manager\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\github-repos\\generation-expansion-planning-models-pyomo\\.conda\\Lib\\site-packages\\pyomo\\dataportal\\plugins\\datacommands.py:39\u001b[0m, in \u001b[0;36mPyomoDataCommands.open\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     37\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mIOError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo filename specified\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     38\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfilename):  \u001b[38;5;66;03m# pragma:nocover\u001b[39;00m\n\u001b[1;32m---> 39\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mIOError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot find file \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfilename)\n",
-      "\u001b[1;31mOSError\u001b[0m: Cannot find file '/inputs/scalars.dat'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# We open a DataPortal to load the data\n",
     "data = pyo.DataPortal() \n",
@@ -203,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "bb09dab8",
    "metadata": {},
    "outputs": [
@@ -1433,10 +1418,10 @@
     {
      "data": {
       "text/plain": [
-       "('mGEP.lp', 2184879091152)"
+       "('mGEP.lp', 2036126861840)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1454,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "cfaf48ad",
    "metadata": {},
    "outputs": [
@@ -1476,7 +1461,7 @@
       "   324 rows\n",
       "   328 cols (0 binary, 4 integer, 0 implied int., 324 continuous)\n",
       "   828 nonzeros\n",
-      "MIP-Timing:      0.0018 - starting analytic centre calculation\n",
+      "MIP-Timing:      0.0023 - starting analytic centre calculation\n",
       "\n",
       "Src: B => Branching; C => Central rounding; F => Feasibility pump; H => Heuristic; L => Sub-MIP;\n",
       "     P => Empty MIP; R => Randomized rounding; S => Solve LP; T => Evaluate node; U => Unbounded;\n",
@@ -1491,23 +1476,23 @@
       " S       0       0         0   0.00%   268415.531506   274284.853914      2.14%       41      8      2       199     0.0s\n",
       " S       0       0         0   0.00%   268630.041213   270742.483704      0.78%       57     11      2       205     0.0s\n",
       " S       0       0         0   0.00%   268686.737496   270225.547384      0.57%       60     13      2       208     0.0s\n",
-      " L       0       0         0   0.00%   268739.266381   269578.36825       0.31%       66     14      2       211     0.0s\n",
-      " T       0       0         0   0.00%   268739.266381   269289.128         0.20%       66     11      4       316     0.0s\n",
-      " T       3       0         1  75.00%   269236.469054   269238.43825       0.00%       67     11      4       419     0.0s\n",
-      "         4       0         2 100.00%   269238.43825    269238.43825       0.00%       67     11      4       425     0.0s\n",
+      " L       0       0         0   0.00%   268739.266381   269578.36825       0.31%       66     14      2       211     0.1s\n",
+      " T       0       0         0   0.00%   268739.266381   269289.128         0.20%       66     11      4       316     0.1s\n",
+      " T       3       0         1  75.00%   269236.469054   269238.43825       0.00%       67     11      4       419     0.1s\n",
+      "         4       0         2 100.00%   269238.43825    269238.43825       0.00%       67     11      4       425     0.1s\n",
       "\n",
       "Solving report\n",
       "  Status            Optimal\n",
       "  Primal bound      269238.43825\n",
       "  Dual bound        269238.43825\n",
       "  Gap               0%\n",
-      "  P-D integral      0.000704769080655\n",
+      "  P-D integral      0.0015687169396\n",
       "  Solution status   feasible\n",
       "                    269238.43825 (objective)\n",
       "                    0 (bound viol.)\n",
       "                    1.13686837722e-13 (int. viol.)\n",
       "                    0 (row viol.)\n",
-      "  Timing            0.05 (total)\n",
+      "  Timing            0.07 (total)\n",
       "                    0.00 (presolve)\n",
       "                    0.00 (solve)\n",
       "                    0.00 (postsolve)\n",
@@ -1528,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "649e2a2e",
    "metadata": {},
    "outputs": [
@@ -1554,7 +1539,7 @@
     "  ### objective function value\n",
     "  print(\"total cost: \"+str(instance.vInvesCost.value+instance.vOperaCost.value))\n",
     "  ### We write some of the results in a csv file\n",
-    "  f = open('.\\\\'+output_folder+'\\\\oGEP_Invest_Result.csv', 'w')\n",
+    "  f = open('./'+output_folder+'/oGEP_Invest_Result.csv', 'w')\n",
     "  f.write(\"g,vInstalUnits,pInstalCap\"+\"\\n\")\n",
     "  for g in instance.g.data():\n",
     "    f.write(str(g)+\",\"+str(instance.vInstalUnits[g].value)+\",\"+str(instance.pUnitCap[g]*instance.vInstalUnits[g].value)+\"\\n\")\n",
